--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -67,7 +67,7 @@
   "shortcuts": "Atajos",
   "help": "Ayuda",
   "settings": "Opciones",
-  "plugins": "Componentes",
+  "plugins": "Complementos",
   "cache": "caché",
   "file": "Archivo",
   "webdav": "WebDAV",
@@ -123,7 +123,7 @@
   "tagExists": "La etiqueta ya existe",
   "tagExistsBody": "Ya existe una etiqueta con este nombre. Por favor escoge otro nombre.",
   "tagBadName": "Mal nombre",
-  "tagBadNameBody": "El nombre de la etiqueta no puede contener los caracteres {}. Por favor, elimínalos.",
+  "tagBadNameBody": "El nombre de etiqueta no puede contener los caracteres {}. Por favor, elimínalos.",
   "genPsTitle": "Generador de ajustes",
   "genPsCreate": "Nuevo ajuste",
   "genPsDelete": "Eliminar ajuste",
@@ -246,7 +246,7 @@
   "detAttachments": "Adjuntos",
   "detDelFromTrash": "¿Eliminar de la papelera?",
   "detDelFromTrashBody": "No podrás volver a recuperarlo.",
-  "detDelFromTrashBodyHint": "Para eliminar elementos de la papelera de forma rápida, haz clic sobre el botón vaciar en el menú Papelera",
+  "detDelFromTrashBodyHint": "Para eliminar rápidamente el contenido de la papelera, haz clic sobre el icono Vaciar en el menú Papelera.",
   "detFieldCopied": "Copiado",
   "detFieldCopiedTime": "Copiado por {} segundos",
   "detCopyHint": "Puedes copiar el valor del campo haciendo clic sobre su título",
@@ -300,20 +300,20 @@
   "autoTypeMsgMatchedByWindow": "Seleccionar una contraseña para {}",
   "autoTypeNoMatches": "sin coincidencias",
   "appSecWarn": "¡No seguro!",
-  "appSecWarnBody1": "Has cargado esta aplicación con una conexión insegura. Alguien podría estar rastreándote y robando tus contraseñas. Te sugerimos encarecidamente no continuar, a no ser que comprendas perfectamente lo que estás haciendo.",
+  "appSecWarnBody1": "Has cargado esta aplicación mediante una conexión insegura. Alguien podría estar observando tu tráfico y robando tus contraseñas. Te aconsejamos no continuar, a no ser que comprendas perfectamente lo que estás haciendo.",
   "appSecWarnBody2": "Sí, tu base de datos está cifrada, pero nadie te puede garantizar que la aplicación no haya sido modificada antes de llegar a ti.",
   "appSecWarnBtn": "Comprendo los riesgos, continuar",
   "appUnsavedWarn": "¡Cambios sin guardar!",
   "appUnsavedWarnBody": "Tienes archivos sin guardar, si cierras la aplicación, se perderán los cambios.",
   "appDontExitBtn": "No salir",
-  "appCannotLockAutoInit": "Esta aplicación no se puede bloquear porque el auto guardado está desactivado.",
+  "appCannotLockAutoInit": "Esta aplicación no se puede bloquear porque el autoguardado está desactivado.",
   "appCannotLock": "Tienes cambios sin guardar que se perderán. ¿Continuar?",
   "appAutoSave": "Guardar cambios automáticamente",
   "appSaveError": "Error guardando",
   "appSaveErrorBody": "Fallo al auto-guardar el archivo",
   "appSaveErrorBodyMul": "Fallo al auto-guardar archivos:",
   "appSettingsError": "Error cargando aplicación",
-  "appSettingsErrorBody": "Hubo un error cargando los ajustes de la aplicación. Por favor, vuelve a comprobar la url de la aplicación o contacta con tu administrador.",
+  "appSettingsErrorBody": "Hubo un error cargando los ajustes de la aplicación. Por favor, vuelve a comprobar la URL o contacta con tu administrador.",
   "appNotSupportedError": "Tu navegador no está soportado.",
   "appTabWarn": "Demasiadas pestañas",
   "appTabWarnBody": "KeeWeb no se puede utilizar en dos pestañas a la vez, por favor, cierra esta pestaña.",
@@ -325,7 +325,7 @@
   "setGenNewVersion": "Nueva versión de aplicación liberada y descargada",
   "setGenReleaseNotes": "Ver notas de versión",
   "setGenReloadToUpdate": "Recarga para actualizar",
-  "setGenUpdateManual": "Se ha liberado una nueva versión. Se comprobará si hay actualizaciones y se instalarán automáticamente, pero no se puede auto-actualizar desde tu versión.",
+  "setGenUpdateManual": "Se ha lanzado una nueva versión. Se comprobará si hay actualizaciones y se instalarán automáticamente, pero no se puede auto-actualizar desde tu versión.",
   "setGenDownloadUpdate": "Bajar actualización",
   "setGenUpdateAuto": "Bajar e instalar automáticamente",
   "setGenUpdateCheck": "Comprobar pero no descargar",
@@ -354,7 +354,7 @@
   "setGenThemeSd": "Solarizado oscuro",
   "setGenThemeSl": "Solarizado claro",
   "setGenLocale": "Idioma",
-  "setGenLocOther": "otros idiomas están disponibles como componentes",
+  "setGenLocOther": "otros idiomas están disponibles como complementos",
   "setGenFontSize": "Tamaño letra",
   "setGenFontSizeNormal": "Normal",
   "setGenFontSizeLarge": "Grande",
@@ -372,7 +372,7 @@
   "setGenNoRememberKeyFiles": "No recordar",
   "setGenRememberKeyFilesData": "Guardar en el almacenamiento interno",
   "setGenRememberKeyFilesPath": "Recordar solo la ruta de archivos llave",
-  "setGenLockInactive": "Auto-bloquear si la aplicación está inactiva",
+  "setGenLockInactive": "Si la app está inactiva",
   "setGenNoAutoLock": "No auto-bloquear",
   "setGenLockMinutes": "En {} minutos",
   "setGenLockHour": "En una hora",
@@ -384,9 +384,9 @@
   "setGenClearMinute": "En un minuto",
   "setGenMinInstead": "Minimizar aplicación en vez de cerrar",
   "setGenLock": "Auto bloqueo",
-  "setGenLockMinimize": "Auto-bloquear al minimizar",
-  "setGenLockCopy": "Auto-bloquear al copiar contraseña",
-  "setGenLockAutoType": "Auto-bloquear en auto-tecleo",
+  "setGenLockMinimize": "Cuando la app está minimizada",
+  "setGenLockCopy": "Al copiar contraseña",
+  "setGenLockAutoType": "En auto-tecleo",
   "setGenLockOrSleep": "Cuando el ordenador esté bloqueado o en suspensión",
   "setGenStorage": "Almacenamiento",
   "setGenShowAdvanced": "Mostrar opciones avanzadas",
@@ -410,7 +410,7 @@
   "setFileSyncInProgress": "sinc. en progreso",
   "setFileSyncError": "Error de sinc.",
   "setFilePass": "Contraseña maestra",
-  "setFilePassChanged": "la contraseña ha cambiado; deja el campo en blanco para usar la antigua contraseña",
+  "setFilePassChanged": "la contraseña ha cambiado; deja el campo en blanco para usar la contraseña anterior",
   "setFileKeyFile": "Archivo llave",
   "setFileSelKeyFile": "Escoge un archivo llave",
   "setFileNames": "Nombres",
@@ -443,7 +443,7 @@
   "setFileGenKeyFile": "Generar nuevo archivo llave",
   "setFileDontUseKeyFile": "No usar archivo llave",
   "setFileEmptyPass": "Contraseña vacía",
-  "setFileEmptyPassBody": "Guardar una base de datos sin contraseña hace que esté totalmente desprotegida. ¿Seguro que quieres hacerlo?",
+  "setFileEmptyPassBody": "Guardar una base de datos sin contraseña hace que esté totalmente desprotegida. ¿Seguro que quieres continuar?",
   "setFileSaveError": "Error guardando",
   "setFileSaveErrorBody": "Error al guardar en archivo",
   "setFileAlreadyExists": "Ya existe",
@@ -455,7 +455,7 @@
   "setShTitle": "Atajos",
   "setShShowAll": "ver todos los elem.",
   "setShColors": "ver elem. con colores",
-  "setShTrash": "ir a papelera",
+  "setShTrash": "ir a Papelera",
   "setShFind": "busca, o teclea algo",
   "setShClearSearch": "limpiar búsqueda",
   "setShCopyPass": "copiar contraseña o campo seleccionado",
@@ -469,14 +469,14 @@
   "setShSave": "guardar todos los archivos",
   "setShGen": "generar contraseña",
   "setShSet": "opciones de aplicación",
-  "setShCopyPassGlobal": "copiar contraseña (con la aplicación en segundo plano)",
-  "setShCopyUserGlobal": "copiar usuario (con la aplicación en segundo plano)",
-  "setShCopyUrlGlobal": "copiar sitio web (con la aplicación en segundo plano)",
-  "setShAutoTypeGlobal": "autocompletado (con la aplicación en segundo plano)",
+  "setShCopyPassGlobal": "copiar contraseña (cuando la app está en segundo plano)",
+  "setShCopyUserGlobal": "copiar usuario (cuando la app está en segundo plano)",
+  "setShCopyUrlGlobal": "copiar sitio web (cuando la app está en segundo plano)",
+  "setShAutoTypeGlobal": "auto-completado (cuando la app está en segundo plano)",
   "setShLock": "bloquear base de datos",
-  "setPlInstallTitle": "Instalar nuevos componentes",
-  "setPlInstallDesc": "Los componentes de KeeWeb añaden características, temas e idiomas a KeeWeb. Los componentes se ejecutan con los mismos privilegios que KeeWeb y pueden acceder y gestionar tus contraseñas. Nunca instales componentes en los que no confíes.",
-  "setPlInstallLabel": "URL del componente",
+  "setPlInstallTitle": "Instalar nuevos complementos",
+  "setPlInstallDesc": "Los complementos de KeeWeb añaden funcionalidades, temas e idiomas a KeeWeb. Los complementos se ejecutan con los mismos privilegios que KeeWeb y pueden acceder y gestionar tus contraseñas. Nunca instales complementos en los que no confíes.",
+  "setPlInstallLabel": "URL complemento",
   "setPlInstallBtn": "Instalar",
   "setPlInstallBtnProgress": "Instalando",
   "setPlUninstallBtn": "Desinstalar",
@@ -491,14 +491,14 @@
   "setPlCreatedBy": "Creado por {}",
   "setPlLoadTime": "ha tardado {} en cargar",
   "setPlLastUpdate": "Última vez comprobado",
-  "setPlLoadError": "error cargando componente",
-  "setPlGalleryLoading": "Cargando componentes, por favor, espera un poco",
-  "setPlGalleryLoadError": "Error cargando componentes",
-  "setPlInstallUrlTitle": "Añadir componente desde URL",
-  "setPlInstallUrlDesc": "Si el componente no está en la galería, puedes instalarlo manualmente desde una URL",
-  "setPlOfficial": "Componente Oficial de KeeWeb",
-  "setPlSearch": "Buscar componentes",
-  "setPlDevelop": "¿Quieres desarrollar tus propios componentes?",
+  "setPlLoadError": "error cargando complemento",
+  "setPlGalleryLoading": "Cargando complementos, por favor, espera un poco",
+  "setPlGalleryLoadError": "Error cargando complementos",
+  "setPlInstallUrlTitle": "Añadir complemento desde URL",
+  "setPlInstallUrlDesc": "Si el complemento no está en la galería, puedes instalarlo manualmente desde una URL",
+  "setPlOfficial": "Complemento Oficial de KeeWeb",
+  "setPlSearch": "Buscar complementos",
+  "setPlDevelop": "¿Quieres desarrollar tus propios complementos?",
   "setPlDevelopStart": "Empieza aquí",
   "setPlTranslate": "O puedes {}",
   "setPlTranslateLink": "traducir la aplicación a tu idioma",
@@ -507,12 +507,12 @@
   "setAboutTitle": "Acerca de",
   "setAboutBuilt": "Esta aplicación está hecha con estas magníficas utilidades",
   "setAboutLic": "Licencia",
-  "setAboutLicComment": "La aplicación por sí misma y todos los componentes incluidos que no son del dominio público están licenciados bajo la licencia MIT.",
+  "setAboutLicComment": "La aplicación en sí y todos los complementos incluidos que no son de dominio público están autorizados bajo la licencia MIT.",
   "setAboutFirst": "Esta es una aplicación open-source creada por {}",
   "setAboutSecond": "y licenciada bajo {}.",
   "setAboutSource": "El código fuente e incidencias están en {}.",
   "setHelpFormat": "Formato de archivo",
-  "setHelpFormatBody": "Esto es una adaptación de la aplicación {} creada con tecnologías web. Puede leer archivos de KeePass en formato kdbx. Puedes crear esos archivos (bases de datos de contraseñas) tanto en KeePass como en esta aplicación. El formato de archivos es 100% compatible y debería ser comprendido por ambas aplicaciones.",
+  "setHelpFormatBody": "Esto es una adaptación de la app {} creada con tecnologías web. Puede leer archivos en formato KeePass (kdbx). Puedes crear esos archivos (bases de datos de contraseñas) tanto en KeePass como en esta aplicación. El formato de archivos es 100% compatible y debería ser comprendido por ambas aplicaciones.",
   "setHelpProblems": "¿Necesitas ayuda?",
   "setHelpProblems1": "Si algo va mal, por favor {}",
   "setHelpProblems2": "o {}",
@@ -524,7 +524,7 @@
   "setHelpWebApp": "Aplicación web",
   "setHelpUpdates": "Actualizaciones",
   "setHelpTwitter": "Twitter",
-  "dropboxSetupDesc": "Son necesarios ciertos parámetros de configuración para usar Dropbox en una aplicación auto-alojada. Por favor, crea tu aplicación de Dropbox y pega su clave aquí debajo.",
+  "dropboxSetupDesc": "Son necesarios ciertos datos de configuración para usar Dropbox en una aplicación auto-alojada. Por favor, crea tu aplicación de Dropbox y rellena su clave aquí debajo.",
   "dropboxAppKey": "Clave de aplicación de Dropbox",
   "dropboxAppKeyDesc": "Copia la clave de tu aplicación de Dropbox (modo desarrollador)",
   "dropboxFolder": "Carpeta de aplicación",
@@ -541,5 +541,5 @@
   "launcherSave": "Guardar base de datos de contraseñas",
   "launcherFileFilter": "Archivos KeePass",
   "authPopupRequired": "Las ventanas emergentes están bloqueadas",
-  "authPopupRequiredBody": "Por favor, permite las ventanas emergentes en tu navegador."
+  "authPopupRequiredBody": "Por favor, permite pop-ups en tu navegador o vuelve a intentarlo."
 }
