--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -316,7 +316,7 @@
   "setGenNewVersion": "Új alkalmazás verzió jelent meg és került letöltésre",
   "setGenReleaseNotes": "Kiadási megjegyzések",
   "setGenReloadToUpdate": "Töltse újra a frissítéshez",
-  "setGenUpdateManual": "Új verzió jelent meg. Automatikusan ellenőrzi és telepíti a frissítéseket, de automatikus az frissítés az Ön verziójáról nem lehetséges.",
+  "setGenUpdateManual": "Új verzió jelent meg. Automatikusan ellenőrzi és telepíti a frissítéseket, de az automatikus frissítés az Ön verziójáról nem lehetséges.",
   "setGenDownloadUpdate": "Frissítés letöltése",
   "setGenUpdateAuto": "Letöltés és frissítés automatikusan",
   "setGenUpdateCheck": "Ellenőrizze, de ne telepítse",
@@ -362,7 +362,7 @@
   "setGenNoRememberKeyFiles": "Ne jegyezze meg",
   "setGenRememberKeyFilesData": "Tárolja az alkalmazás belső tárolójában",
   "setGenRememberKeyFilesPath": "Csak a kulcsfájlok útvonalát jegyezze meg",
-  "setGenLockInactive": "Automatikus zárolás, amikor az alkalmazás inaktív",
+  "setGenLockInactive": "Amikor az alkalmazás inaktív",
   "setGenNoAutoLock": "Ne zárolja automatikusan",
   "setGenLockMinutes": "{} percen belül",
   "setGenLockHour": "Egy órán belül",
@@ -373,7 +373,7 @@
   "setGenClearSeconds": "{} másodpercen belül",
   "setGenClearMinute": "Egy percen belül",
   "setGenMinInstead": "Az alkalmazás minimalizálása bezárás helyett",
-  "setGenLockMinimize": "Automatikus zárolás minimalizálásnál",
+  "setGenLockMinimize": "Amikor az alkalmazás kisméretű",
   "setGenLockCopy": "Automatikus zárolás jelszómásolásnál",
   "setGenStorage": "Tároló",
   "setGenShowAdvanced": "Haladó beállítások megjelenítése",
@@ -397,7 +397,7 @@
   "setFileSyncInProgress": "szinkronizálás folyamatban",
   "setFileSyncError": "Szinkronizálási hiba",
   "setFilePass": "Mester jelszó",
-  "setFilePassChanged": "jelszó megváltozott; hagyja üres a mezőt a régi jelszó használatához",
+  "setFilePassChanged": "a jelszava megváltozott; hagyja üresen a mezőt a régi jelszó használatához",
   "setFileKeyFile": "Kulcsfájl",
   "setFileSelKeyFile": "Kulcsfájl kiválasztása",
   "setFileNames": "Nevek",
@@ -442,7 +442,7 @@
   "setShTitle": "Gyorsbillentyűk",
   "setShShowAll": "minden elem megjelenítése",
   "setShColors": "színezett elemek megjelenítése",
-  "setShTrash": "irány a lomtár",
+  "setShTrash": "irány a Lomtár",
   "setShFind": "keresés, vagy csak kezdjen el gépelni",
   "setShClearSearch": "keresés törlése",
   "setShCopyPass": "jelszó vagy kijelölt mező másolása",
