--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -92,6 +92,7 @@
   "alertSignIn": "Войти",
   "alertCopy": "Скопировать",
   "alertClose": "Закрыть",
+  "alertDoNotAsk": "Больше не спрашивать",
   "appBeta": "ПРЕДУПРЕЖДЕНИЕ: бета-версия, только для просмотра",
   "footerOpen": "Открыть / Создать",
   "footerSyncError": "Ошибка синхронизации",
@@ -211,6 +212,8 @@
   "openError": "Ошибка",
   "openErrorDescription": "Ошибка при открытии файла",
   "openErrorFileNotFound": "Файл не найден",
+  "openListErrorBody": "При загрузке списка файлов произошла ошибка",
+  "openShowAllFiles": "Показать все файлы",
   "detAttDownload": "Нажмите Shift и кликните по вложению чтобы загрузить или",
   "detAttDelToRemove": "Delete для удаления",
   "detEmpty": "Здесь будут отображаться ваши пароли",
@@ -314,6 +317,9 @@
   "appNotSupportedError": "Ваш браузер не поддерживается.",
   "appTabWarn": "Слишком много вкладок",
   "appTabWarnBody": "Нельзя использовать KeeWeb в двух вкладках браузера одновременно. Пожалуйста, закройте эту вкладку.",
+  "appRightsAlert": "Блокировка приложения KeeWeb",
+  "appRightsAlertBody1": "Ваше приложение KeeWeb не защищено от несанкционированных изменений. Предлагаем предоставить разрешение на запись в приложении только администраторам.",
+  "appRightsAlertBody2": "Не хотите предоставить разрешение? Вы сможете сделать это самостоятельно в Терминале.",
   "setGenTitle": "Общие настройки",
   "setGenUpdate": "Обновление",
   "setGenNewVersion": "Новая версия приложения была выпущена и загружена",
@@ -377,9 +383,11 @@
   "setGenClearSeconds": "Через {} секунд",
   "setGenClearMinute": "Через минуту",
   "setGenMinInstead": "Минимизировать приложение вместо закрытия",
+  "setGenLock": "Авто-блокировка",
   "setGenLockMinimize": "Автоматическая блокировка при минимизации",
   "setGenLockCopy": "Автоматическая блокировка после копирования пароля",
   "setGenLockAutoType": "Автоматическая блокировка после автозаполнения",
+  "setGenLockOrSleep": "Когда компьютер заблокирован или отправлен в сон",
   "setGenStorage": "Хранилище",
   "setGenShowAdvanced": "Показать дополнительные настройки",
   "setGenDevTools": "Показать средства разработки",
