--- a/docs/translations/meta.json
+++ b/docs/translations/meta.json
@@ -2,32 +2,38 @@
   "zh-TW": {
     "name": "繁體中文",
     "nameEn": "Chinese Traditional",
-    "count": 493
+    "count": 493,
+    "version": "1.3.0"
   },
   "zh-CN": {
     "name": "简体中文",
     "nameEn": "Chinese Simplified",
-    "count": 493
+    "count": 493,
+    "version": "1.6.0"
   },
   "pt-PT": {
     "name": "Português",
     "nameEn": "Portuguese",
-    "count": 437
+    "count": 437,
+    "version": "1.3.0"
   },
   "ko": {
     "name": "한국어",
     "nameEn": "Korean",
-    "count": 493
+    "count": 493,
+    "version": "1.7.0"
   },
   "cs": {
     "name": "Čeština",
     "nameEn": "Czech",
-    "count": 403
+    "count": 403,
+    "version": "1.2.0"
   },
   "pl": {
     "name": "Polski",
     "nameEn": "Polish",
-    "count": 501
+    "count": 501,
+    "version": "1.5.0"
   },
   "hu": {
     "name": "Magyar",
@@ -38,37 +44,44 @@
   "uk": {
     "name": "Українська",
     "nameEn": "Ukrainian",
-    "count": 493
+    "count": 493,
+    "version": "1.3.0"
   },
   "pt-BR": {
     "name": "Português (Brasil)",
     "nameEn": "Portuguese (Brazil)",
-    "count": 501
+    "count": 501,
+    "version": "1.3.0"
   },
   "no": {
     "name": "Norsk",
     "nameEn": "Norwegian",
-    "count": 493
+    "count": 493,
+    "version": "1.5.0"
   },
   "nl-NL": {
     "name": "Nederlands",
     "nameEn": "Dutch",
-    "count": 493
+    "count": 493,
+    "version": "1.5.0"
   },
   "fr-FR": {
     "name": "Français",
     "nameEn": "French",
-    "count": 501
+    "count": 501,
+    "version": "1.6.0"
   },
   "de-DE": {
     "name": "Deutsch",
     "nameEn": "German",
-    "count": 501
+    "count": 501,
+    "version": "1.5.0"
   },
   "it-IT": {
     "name": "Italiano",
     "nameEn": "Italian",
-    "count": 493
+    "count": 493,
+    "version": "1.5.0"
   },
   "ru-RU": {
     "name": "Русский",
@@ -85,6 +98,7 @@
   "sv-SE": {
     "name": "Svenska",
     "nameEn": "Swedish",
-    "count": 447
+    "count": 447,
+    "version": "1.3.0"
   }
 }
