--- a/docs/translations/cs/cs.json
+++ b/docs/translations/cs/cs.json
@@ -333,7 +333,7 @@
   "setGenTryBetaWarningBody": "Prosím uložte všechny soubory a opět klikněte na toto tlačítko",
   "setGenShowAppLogs": "Ukázat logy apky",
   "setFileStorage": "Tento soubor byl nahrán z {}",
-  "setFileSave": "Uložiz",
+  "setFileSave": "Uložit",
   "setFileSaveTo": "Uložit do...",
   "setFileClose": "Zavřít",
   "setFileSync": "Synchronizace",
