--- a/docs/translations/zh-CN/zh-CN.json
+++ b/docs/translations/zh-CN/zh-CN.json
@@ -92,6 +92,7 @@
   "alertSignIn": "登录",
   "alertCopy": "复制",
   "alertClose": "关闭",
+  "alertDoNotAsk": "不再询问",
   "appBeta": "警告：测试版本，仅供预览",
   "footerOpen": "打开 / 新建",
   "footerSyncError": "同步出错",
@@ -211,6 +212,8 @@
   "openError": "错误",
   "openErrorDescription": "打开文件时出错",
   "openErrorFileNotFound": "未找到文件",
+  "openListErrorBody": "加载文件列表时出现错误",
+  "openShowAllFiles": "显示所有文件",
   "detAttDownload": "Shift+点击 附件 按钮下载或按",
   "detAttDelToRemove": "Delete 键删除文件",
   "detEmpty": "您的密码会显示在这里",
@@ -314,6 +317,9 @@
   "appNotSupportedError": "您的浏览器不受支持。",
   "appTabWarn": "标签页过多",
   "appTabWarnBody": "KeeWeb 不能同时在两个浏览器标签页中使用。请关闭这个标签页。",
+  "appRightsAlert": "锁定 KeeWeb 应用",
+  "appRightsAlertBody1": "您的 KeeWeb 应用目前未被保护以抵御未经授权的更改。我们向您请求许可，以使应用仅能被管理员写入。",
+  "appRightsAlertBody2": "不想授权？您可以在终端中手动操作",
   "setGenTitle": "全局设置",
   "setGenUpdate": "更新",
   "setGenNewVersion": "新的应用版本已经发布并下载完毕",
@@ -377,9 +383,11 @@
   "setGenClearSeconds": "在 {} 秒后",
   "setGenClearMinute": "在一分钟后",
   "setGenMinInstead": "最小化此应用但不关闭",
+  "setGenLock": "自动锁定",
   "setGenLockMinimize": "最小化时自动锁定",
   "setGenLockCopy": "复制密码时自动锁定",
   "setGenLockAutoType": "自动输入时自动锁定",
+  "setGenLockOrSleep": "当计算机被锁定或进入睡眠状态",
   "setGenStorage": "存储",
   "setGenShowAdvanced": "显示高级设置",
   "setGenDevTools": "显示开发工具",
