--- a/docs/translations/fr-FR/fr-FR.json
+++ b/docs/translations/fr-FR/fr-FR.json
@@ -59,7 +59,7 @@
   "noTitle": "aucun titre",
   "or": "ou",
   "history": "historique",
-  "template": "template",
+  "template": "modèle",
   "notImplemented": "Non Implémenté",
   "saveChanges": "Sauvegarder les changements",
   "discardChanges": "Annuler les changements",
