--- a/docs/translations/no/no.json
+++ b/docs/translations/no/no.json
@@ -34,7 +34,7 @@
     "Onsdag",
     "Torsdag",
     "Fredag",
-    "Lørdag"
+    "Søndag"
   ],
   "weekdaysShort": [
     "Søn",
@@ -92,6 +92,7 @@
   "alertSignIn": "Logg inn",
   "alertCopy": "Kopier",
   "alertClose": "Lukk",
+  "alertDoNotAsk": "Ikke spør flere ganger",
   "appBeta": "ADVARSEL: betaversjon, kun forhåndsvisning",
   "footerOpen": "Åpne / Ny",
   "footerSyncError": "Synkroniseringsfeil",
@@ -211,6 +212,8 @@
   "openError": "Feil",
   "openErrorDescription": "Det skjedde en feil ved åpning av fil",
   "openErrorFileNotFound": "Fil ikke funnet",
+  "openListErrorBody": "Det oppstod en feil under lasting av fil-liste",
+  "openShowAllFiles": "Vis alle filer",
   "detAttDownload": "Skift-klikk på vedlegg-knapp for å laste ned, eller",
   "detAttDelToRemove": "Slett for å fjerne",
   "detEmpty": "Passordene dine vil bli vist her",
@@ -314,6 +317,9 @@
   "appNotSupportedError": "Nettleseren din støttes ikke",
   "appTabWarn": "For mange faner",
   "appTabWarnBody": "KeeWeb kan ikke brukes i to nettleser-faner samtidig, vennligst lukk denne fanen.",
+  "appRightsAlert": "Låsing av KeeWeb-app",
+  "appRightsAlertBody1": "KeeWeb er for øyeblikket ikke beskyttet mot uautoriserte endringer. Vi ber om din tillatelse for å gjøre at bare administratorer kan endre på appen.",
+  "appRightsAlertBody2": "Vil du gi tillatelse? Du kan gjøre det selv i terminalen",
   "setGenTitle": "Generelle instillinger",
   "setGenUpdate": "Oppdatering",
   "setGenNewVersion": "Ny app-versjon har blitt utgitt og nedlastet",
@@ -377,9 +383,11 @@
   "setGenClearSeconds": "etter {} sekunder",
   "setGenClearMinute": "etter et minutt",
   "setGenMinInstead": "Minimér appen istedet for å lukke",
+  "setGenLock": "Autolås",
   "setGenLockMinimize": "Auto-lås ved minimering",
   "setGenLockCopy": "Auto-lås ved kopiering av passord",
   "setGenLockAutoType": "Auto-lås ved autofylling",
+  "setGenLockOrSleep": "Når datamaskinen er låst eller i dvale",
   "setGenStorage": "Lagring",
   "setGenShowAdvanced": "Vis avanserte innstillinger",
   "setGenDevTools": "Vis utviklerverktøy",
