--- a/docs/translations/cs/cs.json
+++ b/docs/translations/cs/cs.json
@@ -1,49 +1,49 @@
 {
   "months": [
-    "leden",
-    "únor",
-    "březen",
-    "duben",
-    "květen",
-    "červen",
-    "červenec",
-    "srpen",
-    "září",
-    "říjen",
-    "listopad",
-    "prosinec"
+    "Leden",
+    "Únor",
+    "Březen",
+    "Duben",
+    "Květen",
+    "Červen",
+    "Červenec",
+    "Srpen",
+    "Září",
+    "Říjen",
+    "Listopad",
+    "Prosinec"
   ],
   "monthsShort": [
-    "led",
-    "únr",
-    "bře",
-    "dub",
-    "kvě",
-    "čer",
-    "čvc",
-    "srp",
-    "zář",
-    "říj",
-    "lis",
-    "pro"
+    "Led",
+    "Ún",
+    "Bře",
+    "Dub",
+    "Kvě",
+    "Čer",
+    "Čvc",
+    "Srp",
+    "Zář",
+    "Říj",
+    "Lis",
+    "Pro"
   ],
   "weekdays": [
-    "neděle",
-    "pondělí",
-    "úterý",
-    "středa",
-    "čtvrtek",
-    "pátek",
-    "sobota"
+    "Neděle",
+    "Pondělí",
+    "Úterý",
+    "Středa",
+    "Čtvrtek",
+    "Pátek",
+    "Sobota"
   ],
   "weekdaysShort": [
-    "ne",
-    "po",
-    "út",
-    "st",
-    "čt",
-    "pá",
-    "so"
+    "Ne",
+    "Po",
+    "Út",
+    "St",
+    "Čt",
+    "Pá",
+    "So"
   ],
   "retToApp": "zpět do aplikace",
   "name": "jméno",
@@ -51,7 +51,7 @@
   "title": "titulek",
   "password": "heslo",
   "user": "uživatel",
-  "website": "website",
+  "website": "www",
   "tags": "tagy",
   "notes": "poznámky",
   "entry": "záznam",
@@ -60,7 +60,7 @@
   "or": "nebo",
   "history": "historie",
   "template": "šablona",
-  "notImplemented": "není implementováno",
+  "notImplemented": "Není implementováno",
   "saveChanges": "Uložit změny",
   "discardChanges": "Zahodit změny",
   "advanced": "Pokročilé",
@@ -92,6 +92,7 @@
   "alertSignIn": "Registrace",
   "alertCopy": "Kopírovat",
   "alertClose": "Zavřít",
+  "alertDoNotAsk": "Už se mě dál neptej",
   "appBeta": "UPOZORNĚNÍ: beta verze, není určeno pro denní používání",
   "footerOpen": "Otevřít / Nový",
   "footerSyncError": "Chyba synchronizace",
@@ -211,6 +212,8 @@
   "openError": "Chyba",
   "openErrorDescription": "Vyskytla se chyba při otevírání souboru",
   "openErrorFileNotFound": "Soubor nebyl nalezen",
+  "openListErrorBody": "Chyba v načítání souboru",
+  "openShowAllFiles": "Zobraz soubory",
   "detAttDownload": "Použijte shift+klik pro stažení přílohy nebo ",
   "detAttDelToRemove": "Smazat",
   "detEmpty": "Tady budou zobrazena vaše hesla",
@@ -261,6 +264,7 @@
   "detAutoType": "Automaticky vyplnit",
   "detAutoTypeSettings": "Nastavit automatické vyplnění",
   "detAutoTypeEnabled": "Zapnout automatické vyplňování pro tuto položku",
+  "detAutoTypeInput": "Vstup",
   "detAutoTypeShortcutsDesc": "{} nebo {}, zatímco je apka neaktivní",
   "detAutoTypeWindow": "Okno",
   "detAutoTypeInputWindow": "Název okna",
@@ -275,15 +279,25 @@
   "detSetupOtpScanButton": "Vybrat/Naskenovat",
   "detSetupOtpAlertBodyWith": "s {}",
   "detOtpImageError": "Chyba při čtení obrázku",
+  "detOtpImageErrorBody": "Omlouváme se, nemůžeme načíst formát obrázku, kontaktujte autory aplikace s popisem problému.",
   "detOtpImageReading": "Čte se QR kód...",
   "detOtpQrError": "Chyba při skenování QR kódu",
+  "detOtpQrErrorBody": "Omlouváme se, nemůžeme přečíst QR kód, zkuste to ještě jednou, nebo kontaktujte autory aplikace s popisem problému",
   "detOtpQrWrong": "Špatný QR kód",
+  "detOtpQrWrongBody": "Váš QR kód byl úspěšně oskenován, ale neobsahuje žádné data.",
   "autoTypeKeys": "Klíče",
   "autoTypeLink": "více...",
   "autoTypeErrorNotInstalled": "{} není nainstalován",
   "autoTypeMsgMatchedByWindow": "Vybrat heslo pro {}",
+  "autoTypeNoMatches": "žádná shoda",
+  "appSecWarn": "Není bezpečné!",
+  "appSecWarnBody1": "Načetl jste aplikaci nezabezpečeně. Někdo může číst váš obsah a ukrást vám hesla. Silně doporučujeme přestat, dokud si nebudete jisti co děláte.",
+  "appSecWarnBtn": "Rozumím nebezpečí, pokračovat",
   "appUnsavedWarn": "Neuložili jste změny!",
+  "appUnsavedWarnBody": "Máte neuložené soubory, pokud zavřete aplikaci, budou ztraceny",
   "appDontExitBtn": "Neodcházet",
+  "appCannotLockAutoInit": "Aplikace nemůže být zamčena, protože je Automatické-uložení vypnuto.",
+  "appCannotLock": "Máte neuložené změny, které budou ztraceny. Pokračovat?",
   "appAutoSave": "Automaticky ukládat změny",
   "appSaveError": "Chyba při ukládání",
   "appSaveErrorBody": "Nepodařilo se automaticky uložit soubor",
@@ -291,10 +305,15 @@
   "appSettingsError": "Chyba při načítání apky",
   "appNotSupportedError": "Váš prohlížeč není podporován.",
   "appTabWarn": "Příliš mnoho tabů",
+  "appTabWarnBody": "KeeWeb nemůže být používán ve dvou panelech v jednu dobu, prosím zavřete panel.",
+  "appRightsAlert": "Uzamčení KeeWeb aplikace",
+  "appRightsAlertBody2": "Nechcete dát oprávnění? Můžete to udělat pomocí Terminálu",
   "setGenTitle": "Obecné nastavení",
   "setGenUpdate": "Update",
   "setGenNewVersion": "Byla vydána a stáhnuta nová verze apky",
   "setGenReleaseNotes": "Shlédnout release notes",
+  "setGenReloadToUpdate": "Aktualizujte stránku",
+  "setGenUpdateManual": "Byla vydána nová verze. Kontrola a aktualizace probíhá automaticky, ale automatická aktualizace z vaší verze není možná.",
   "setGenDownloadUpdate": "Stáhnout update",
   "setGenUpdateAuto": "Automaticky stáhnout a nainstalovat",
   "setGenUpdateCheck": "Vyzkoušet, ale neinstalovat",
@@ -318,8 +337,15 @@
   "setGenThemeDb": "Tmavěhnědý",
   "setGenThemeWh": "Bílý",
   "setGenThemeTe": "Terminál",
+  "setGenThemeHc": "Vysoký kontrast",
   "setGenLocale": "Jazyk",
+  "setGenLocOther": "jiné jazyky jsou dostupné pomocí doplňků",
+  "setGenFontSize": "Velikost písma",
   "setGenFontSizeNormal": "Normální",
+  "setGenFontSizeLarge": "Velké",
+  "setGenFontSizeLargest": "Největší",
+  "setGenTitlebarStyle": "Styl okna (vyžaduje restart)",
+  "setGenTitlebarStyleDefault": "Výchozí",
   "setGenFunction": "Funkce",
   "setGenAutoSync": "Automaticky ukládat a synchronizovat",
   "setGenLockMinutes": "Za {} minut",
@@ -362,7 +388,13 @@
   "setFileKdfParamsIter": "Iterace",
   "setFileKdfParamsMem": "Paměť, KB",
   "setFileKeyChangeForce": "Vyžádat si změnu klíče po (dnech)",
+  "setFileUseKeyFile": "Použít klíč",
+  "setFileUseGenKeyFile": "Použít vygenerovaný klíč",
+  "setFileUseOldKeyFile": "Použít starý klíč",
+  "setFileGenKeyFile": "Generovat nový klíč",
+  "setFileDontUseKeyFile": "Nepoužívat klíč",
   "setFileEmptyPass": "Prázdné heslo",
+  "setFileSaveError": "Uložit chybu",
   "setFileSaveErrorBody": "Chyba při ukládání do souboru",
   "setFileAlreadyExists": "Už existuje",
   "setFileAlreadyExistsBody": "Soubor {} už existuje. Přepsat ho?",
@@ -439,6 +471,8 @@
   "setHelpWebApp": "Webová apka",
   "setHelpUpdates": "Updaty",
   "setHelpTwitter": "Twitterová apka",
+  "dropboxFolderPlaceholder": "výchozí složka",
+  "webdavSaveMethod": "Uložit metodu",
   "webdavSavePut": "Přepsat kbdx soubor s PUT",
   "launcherSave": "Uložit databázi hesel",
   "launcherFileFilter": "soubory KeePassu",
