--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -48,14 +48,14 @@
   "retToApp": "volver a aplicación",
   "name": "nombre",
   "icon": "icono",
-  "title": "Título",
+  "title": "título",
   "password": "contraseña",
-  "user": "Usuario",
-  "website": "Sitio web",
+  "user": "usuario",
+  "website": "sitio web",
   "tags": "etiquetas",
-  "notes": "Notas",
+  "notes": "notas",
   "entry": "entrada",
-  "group": "Grupo",
+  "group": "grupo",
   "noTitle": "sin título",
   "or": "o",
   "history": "historial",
@@ -69,7 +69,7 @@
   "settings": "Opciones",
   "plugins": "Complementos",
   "cache": "caché",
-  "file": "Archivo",
+  "file": "archivo",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
   "gdrive": "Google Drive",
@@ -80,20 +80,20 @@
   "menuSetGeneral": "General",
   "menuSetAbout": "Acerca de",
   "menuAlertNoTags": "Sin etiquetas",
-  "menuAlertNoTagsBody": "Puedes añadir nuevas etiquetas mientras editas una entrada, en la sección de etiquetas.",
+  "menuAlertNoTagsBody": "Puede añadir nuevas etiquetas mientras edita una entrada, en la sección de etiquetas.",
   "menuEmptyTrash": "Vaciar papelera",
   "menuEmptyTrashAlert": "¿Vaciar papelera?",
-  "menuEmptyTrashAlertBody": "No volverás a tener acceso a los objetos eliminados",
+  "menuEmptyTrashAlertBody": "No podrá recuperar los elementos eliminados",
   "menuItemCollapsed": "Doble clic para expandir",
   "alertYes": "Sí",
   "alertNo": "No",
-  "alertOk": "Vale",
+  "alertOk": "Aceptar",
   "alertCancel": "Cancelar",
   "alertSignIn": "Iniciar sesión",
   "alertCopy": "Copiar",
   "alertClose": "Cerrar",
   "alertDoNotAsk": "No volver a preguntar",
-  "appBeta": "ADVERTENCIA: versión beta, solo para vista anticipada",
+  "appBeta": "ADVERTENCIA: versión beta, solo es un avance",
   "footerOpen": "Abrir / Nueva",
   "footerSyncError": "Error al sincronizar",
   "footerTitleGen": "Generar",
@@ -145,7 +145,7 @@
   "keyChangeTitleExpired": "Contraseña maestra caducada",
   "keyChangeMessageExpired": "La contraseña maestra de esta base de datos ha caducado. Introduce una nueva contraseña",
   "keyChangeRepeatPassword": "Contraseña, una vez más",
-  "iconFavTitle": "Descargar y usar el favicon de la web",
+  "iconFavTitle": "Descargar y usar el favicon del sitio web",
   "iconSelCustom": "Elegir icono personalizado",
   "listEmptyTitle": "Vacío",
   "listEmptyAdd": "Añadir con el botón {} de arriba",
@@ -326,8 +326,8 @@
   "setGenReleaseNotes": "Ver notas de versión",
   "setGenReloadToUpdate": "Recarga para actualizar",
   "setGenUpdateManual": "Se ha lanzado una nueva versión. Se comprobará si hay actualizaciones y se instalarán automáticamente, pero no se puede auto-actualizar desde tu versión.",
-  "setGenDownloadUpdate": "Bajar actualización",
-  "setGenUpdateAuto": "Bajar e instalar automáticamente",
+  "setGenDownloadUpdate": "Descargar actualización",
+  "setGenUpdateAuto": "Descargar e instalar automáticamente",
   "setGenUpdateCheck": "Comprobar pero no descargar",
   "setGenNoUpdate": "No comprobar actualizaciones",
   "setGenUpdateChecking": "Buscando actualizaciones",
