--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -248,7 +248,7 @@
   "detDelFromTrashBody": "Вы не сможете отменить эту операцию.",
   "detDelFromTrashBodyHint": "Чтобы быстро удалить все содержимое корзины, нажмите пиктограмму очистки в меню корзины.",
   "detFieldCopied": "скопирован",
-  "detFieldCopiedTime": "Скопировано за {} секунд",
+  "detFieldCopiedTime": "Скопировано на {} секунд",
   "detCopyHint": "Вы можете скопировать значение поля, нажав на его заголовок",
   "detMore": "еще",
   "detClickToAddField": "щелкните, чтобы добавить новое поле",
